# fedci

./: .gitignore  100randomPAGs.RData  DESCRIPTION  Dockerfile  Dockerfile.dev  LICENSE  README.md  aggregation.r  analyze_iod_v_fedci.py  ci-data-1.parquet  ci-data-2.parquet  ci-data-3.parquet  ci.r  ci_functions.r  docker-compose.yml  eval.ipynb  evaluation.ipynb  evl.py  example.r  install_mxm.r  iod_v_fedci.py  load_pags.r  local-ci.r  multinom.ipynb  network_test.py  pyproject.toml  requirements.r  requirements.txt  riod-test.ipynb  run_datacheck.py  run_eval.py  run_eval2.py  run_eval_advanced.py  run_tests.py  run_tests_advanced.py  t.py  temp.r  test.ipynb  test.py  test2.ipynb  (+5 more)
.devcontainer/: devcontainer.json
R/: IOD.R  IOD_Helper.R  example.R
app/: startup.sh
app/fedci/: __init__.py  client.py  helper.py  server.py  test.ipynb  testengine.ckp  testing.py  utils.py
app/fedci_/: __init__.py  env.py  testing.py  utils.py
app/litestar/: app.py  data_structures.py  env.py  helpers.py  ls_data_structures.py  ls_env.py  ls_helpers.py  ls_room.py  ls_runner.py  ls_user.py  (+4 more)
dgp/: __init__.py
example/: example.R
fedci/: __init__.py  client.py  dgp.ipynb  env.py  evaluation.py  helper.py  server.py  test.ipynb  testdata-1.parquet  testdata-2.parquet  testdata-3.parquet  testdata.parquet  testdata2.parquet  testing.py  utils.py
fedci_masked/: client.py  env.py  server.py  testing.py  utils.py
images/: p_value_acc.html  p_value_corr.html  p_value_jaccard_overlap.html  p_value_scatter.html
rIOD/: DESCRIPTION  NAMESPACE
tests/: test.py  test_precise.py
(+49 files in other folders)
