[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-fedci"
authors = [{ name = "Maximilian Hahn", email = "max.hahn@gmx.de" }]
version = "0.1.0"
license = { file = "LICENSE" }
description = "A small package for federated independence tests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.22.0",
    "pyarrow>=19.0.0",
    "pytest>=8.3.5",
    "rpyc>=6.0.1",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4",]

[project.urls]
Homepage = "https://github.com/maxhahn/fedci"
Repository = "https://github.com/maxhahn/fedci"
